--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-This is a test.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="template.js"></script>
+    <script type="text/front-matter">
+    title: Applied Data Science
+    description: Clear Examples of Data Impacting the Real World
+    </script>
+</head>
+
+<body>
+
+<dt-article>
+    <div class="posts-list l-page">
+        <a href="claremont_news/" class="post-preview ">
+            <div class="metadata">
+                <div class="publishedDate">Dec. 4, 2019</div>
+            </div>
+            <div class="thumbnail"><img src="claremont_news/img/coefs_True_l1_1000.0.png"></div>
+            <div class="description">
+                <h2>Editorial Biases in Claremont Student Newspapers</h2>
+                <p>
+                I used natural language processing (NLP) algorithms to analyze the five student newspapers of the Claremont Colleges.
+                Highlights of the analysis include that <em>The Scripps Voice</em> has the most objective reporting,
+                and that nobody likes to write articles about Harvey Mudd College.
+                </p>
+            </div>
+        </a>
+    </div>
+</dt-article>
+
+</body>
+</html>
