--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="thumbnail"><img src="claremont_news/img/coefs_True_l1_1000.0.png"></div>
             <div class="description">
-                <h2>Editorial Biases in Claremont Student Newspapers</h2>
+                <h2>Editorial Bias in Claremont Student Newspapers</h2>
                 <p>
                 I used natural language processing (NLP) algorithms to analyze the five student newspapers of the Claremont Colleges.
                 Highlights of the analysis include that <em>The Scripps Voice</em> has the most objective reporting,
