--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="metadata">
                 <div class="publishedDate">Dec. 4, 2019</div>
             </div>
-            <div class="thumbnail"><img src="claremont_news/img/coefs_True_l1_1000.0.png"></div>
+            <div class="thumbnail"><img src="img/claremont_news.png"></div>
             <div class="description">
                 <h2>Editorial Bias in Claremont Student Newspapers</h2>
                 <p>
