--- a/claremont_news/index.html
+++ b/claremont_news/index.html
@@ -380,7 +380,18 @@ I counted the total number of times that articles written in each of the 5 paper
 
 <p>
 <em>The CMC Forum</em> and <em>The Scripps Voice</em> mention CMC and Scripps colleges respectively a large number of times, which makes sense because these papers have an explicit editorial mission to focus on these colleges.
-More surprisingly, <em>The Golden Antlers</em> and <em>The Student Life</em> mention CMC and Pomona colleges respectively a large number of times, which goes against their stated missions of serving the entire Claremont Consortium equally.
+</p>
+<p>
+More surprisingly, <em>The Student Life</em> mentions Pomona college a large number of times, which seems to contradict their stated mission of serving the entire Claremont Consortium equally.
+A careful look at the articles written by <em>The Student Life</em> shows that they are particularly inclined to also say more positive things about Pomona College than other colleges.
+If we look at the 50 articles with the most positive sentiment from <em>The Student Life</em>, we don't find a single mention of any non-Pomona college by name, but we find many articles like:
+</p>
+<ol>
+    <li><a href=https://tsl.news/news439/>Pomona Named Best Value College Again</a></li>
+    <li><a href=https://tsl.news/life-style590/>Pomona Students Bring Their Best Pop Culture Debates to the Blogosphere</a></li>
+    <li><a href=https://tsl.news/opinions611/>Vigil Shows Pomona Students at Their Best</a></li>
+</ol>
+<p>
 <em>The Claremont Independent</em> has the most balanced coverage of the Claremont Colleges,
 but notably has a distinct lack of reporting about Harvey Mudd.
 In fact, Mudd is among the least mentioned colleges for every newspaper.
