--- a/satire_news/index.html
+++ b/satire_news/index.html
@@ -9,8 +9,8 @@ MathJax.Hub.Config({
 </script>
 
 <script type="text/front-matter">
-  title: "Article Title"
-  description: "Description of the post"
+  title: "Investigating the Similarities Between Satire and Misleading News Headlines"
+  description: "An investigation on the similarities between satire and reliable news headlines, and how they can help determine the strategies used in other forms of misleading or fake news."
   authors:
   - Violet Burbank
   affiliations:
@@ -18,8 +18,8 @@ MathJax.Hub.Config({
 </script>
 
 <dt-article>
-<h1>Serious or Sensational: Comparing Reliable and Satirical Headlines to Conspiracy, Clickbait, and Fake News</h1>
-<h2>Using logistic regression to classify news headlines from various sources as satire or reliable.</h2>
+<h1>Investigating the Similarities Between Satire and Misleading News Headlines</h1>
+<h2>An investigation on the similarities between satire and reliable news headlines, and how they can help determine the strategies used in other forms of misleading or fake news.</h2>
 <dt-byline></dt-byline>
     <hr>
 <p><strong>TL;DR</strong> Using the Fake News Corpus dataset, I created a logistic regression model to differentiate between reliable and satire news headlines. This model demonstrated that conspiracy and clickbait headlines tend to be more similar to satire than reliable headlines.</p>
