--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2>Editorial Bias in Claremont Student Newspapers</h2>
                 <p>
                 I used natural language processing (NLP) algorithms to analyze the five student newspapers of the Claremont Colleges.
-                Highlights of the analysis include that <em>The Scripps Voice</em> has the most objective reporting,
+                Highlights of the analysis include that <em>The CMC Forum</em> has the most objective reporting,
                 and that nobody likes to write articles about Harvey Mudd College.
                 </p>
             </div>
