--- a/Tritschler:Miller Final Project/Mining.html
+++ b/Tritschler:Miller Final Project/Mining.html
@@ -53,11 +53,11 @@ MathJax.Hub.Config({
 
 <p>Here is an example of a tweet with positive sentiment<dt-cite key="positive"></dt-cite>:</p>
 
-<img src = "pos_tweet.jpg", height = 400, width = 800 style="margin: 35px 210px 50px;">
+<img src = "pos_tweet.jpg", height = 300, width = 800 style="margin: 35px 210px 50px;">
 
 <p>Here is an example of a tweet with negative sentiment:<dt-cite key="negative"></dt-cite></p>
 
-<img src = "neg_tweet.jpg", height = 400, width = 800 style="margin: 35px 210px 50px;">
+<img src = "neg_tweet.jpg", height = 350, width = 800 style="margin: 35px 210px 50px;">
 
 <h2>The Figures</h2>
 
@@ -74,11 +74,12 @@ MathJax.Hub.Config({
 
     The following chart plots the average sentiment over time.</p>
 
-    <p>The average sentiment is about -0.15, and so Americans on average have a negative sentiment towards paying college athletes. 
-      This sentiment increased dramatically in May 2018, which suggests that Americans may be warming up to the idea of paying college 
-      athletes. Unfortunately, we do not have an explanation for why this change might have occurred.</p>
+<img src = "pol2.jpg", height = 600, width = 800 style="margin: 35px 210px 50px;">
 
-<img src = "pol over time.jpg", height = 500, width = 800 style="margin: 35px 210px 50px;">
+<p>The average sentiment is about -0.15, and so Americans on average have a negative sentiment towards paying college athletes. 
+  This sentiment increased dramatically in May 2018, which suggests that Americans may be warming up to the idea of paying college 
+  athletes. Unfortunately, we do not have an explanation for why this change might have occurred.</p>
+
 
 <p>In our last analysis, we looked at how the political affiliation of a state correlates with opinion on paying college athletes. 
   To do this, we divided states into four categories: democratic, democratic-leaning, republican-leaning, and republican.  We defined 
@@ -88,7 +89,7 @@ MathJax.Hub.Config({
   state. Then, we measured the polarity of tweets sent from states in these categories and plot the results below.
   </p>
 
-<img src = "pol_affil.jpg",height = 500, width = 800 style="margin: 35px 210px 50px;">
+<img src = "affil2.jpg",height = 500, width = 800 style="margin: 35px 210px 50px;">
 
 <p>All four categories have similar distributions. The democratic states having the most negative comments, but only slightly. Therefore, we 
   conclude that the political affiliation of a state does not have a strong effect on that state's attitude towards paying college athletes.</p>
@@ -143,7 +144,7 @@ MathJax.Hub.Config({
 
   @article { negative,
     title={Negative Tweet},
-    author = {@BretBaier},
+    author = {@dmdjaj},
     journal={},
     year={2018},
     url ={https://twitter.com/dmdjaj/status/980938747058491393?s=20}
