publish fair pay to play

--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
 
 <dt-article>
     <div class="posts-list l-page">
+        <a href="fair_pay_to_play/" class="post-preview ">
+            <div class="metadata">
+                <div class="publishedDate">Dec. 18, 2019</div>
+            </div>
+            <div class="thumbnail"><img src="fair_pay_to_play/thumbnail.png"></div>
+            <div class="description">
+                <h2>Support for Paying College Athletes Uncorrelated with Political Affiliation</h2>
+                <p>
+                We analyzed the sentiment of tweets that mention paying college athletes and found that most of these tweets are against paying college athletes. This was true whether the tweets were sent from democratic or republican states. 
+                </p>
+            </div>
+        </a>
         <a href="claremont_news/" class="post-preview ">
             <div class="metadata">
                 <div class="publishedDate">Dec. 4, 2019</div>
             </div>
-            <div class="thumbnail"><img src="img/claremont_news.png"></div>
+            <div class="thumbnail"><img src="claremont_news/thumbnail.png"></div>
             <div class="description">
                 <h2>Editorial Bias in Claremont Student Newspapers</h2>
                 <p>
