--- a/about.html
+++ b/about.html
@@ -11,36 +11,38 @@
 </head>
 
 <body>
-<dt-header>
-<div class="content l-page">
-    <a href="/" class="logo">Applied Data Science</a>
-    <div class="nav">
-    <a href="/about/">About</a>
-    <a href="/submit/">Submit</a>
-    </div>
-</div>
-</dt-header>
 
 <dt-article>
-    <h1>About Applied Data Science</h1>
+    <h1>About</h1>
+    <p><em>Data Insights</em> is an academic journal for undergraduate data science research.
+    Each article presents a single insight that was somehow gleaned from data.
+    The editorial focus is on a clear exposition that explains why the insight is important.
+    There are no restrictions on the type of data sources used or the methods of analyzing the data,
+    but the best insights typically come from simple analyses.
+    </p>
+    <p>
+    
+    <!--<em>Data Instights</em> emphasizes clear exposition for a broad audience.-->
+    <em>Data Insights</em> was largely inspired by the machine learning journal <a href=https://distill.pub><em>Distill</em></a>, 
+    but there is no official relationship between the two.
+    <h2>Submissions</h2>
+    <p>
+    Submissions are welcome from any undergraduate student, anywhere in the world.<dt-fn>Submissions from recently graduated undergraduates are also welcome as long as the work was primarily completed before graduation.  A typical example would be publishing a small part of a senior thesis.</dt-fn>
+    To submit an article,
+    issue a pull request into the <a href='https://github.com/mikeizbicki/datainsights.pub'>github repository</a>.
+    This will initiate a back-and-forth process with the editors to polish your submission for publication.
+    When the pull request is finally accepted,
+    your article will be instantly published online.
+    </p>
+    <p>
+    To ensure that your submission idea is a good fit for <em>Data Insights</em>,
+    it is recommended to email <a href=mailto:mike@izbicki.me>Mike Izbicki</a> before beginning the submission process.
+    </p>
+    <!--<h2>Award</h2>-->
+    <!--<p></p>-->
 </dt-article>
 
 <dt-footer>
-<div class="l-page">
-    <div class="description">
-    <a href="/" class="logo">Applied Data Science</a> 
-    provides clear expositions of how data impacts the real world
-    </div>
-    <div class="nav">
-    <a href="/about/">About</a>
-    <a href="/submit/">Submit</a>
-    <!--<a href="/archive/">Archive</a>-->
-    <!--<a href="/rss.xml">RSS</a>-->
-    <a href="https://github.com/mikeizbicki/">GitHub</a>
-    <!--<a href="https://twitter.com/applieddatasciencepub">Twitter</a>-->
-    <!--&nbsp;&nbsp;&nbsp;&nbsp; ISSN 2476-0757-->
-  </div>
-</div>
 </dt-footer>
 
 </body>
