--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 
 <dt-article>
     <div class="posts-list l-page">
+        <a href="reddit_political_leanings/" class="post-preview ">
+            <div class="metadata">
+                <div class="publishedDate">Dec. 23, 2019</div>
+            </div>
+            <div class="thumbnail"><img src="reddit_political_leanings/thumbnail.png"></div>
+            <div class="description">
+                <h2>Reddit’s leftward political bias</h2>
+                <p>
+                I combined data from the reddit API and AllSides Media to measure the political bias of six popular political subreddits. I found that the supposedly neutral r/politics is significantly more left-leaning than the explicitly left-leaning subreddits r/democrats and r/liberal, but that political bias has not been increasing over time.
+                </p>
+            </div>
+        </a>
         <a href="fair_pay_to_play/" class="post-preview ">
             <div class="metadata">
                 <div class="publishedDate">Dec. 18, 2019</div>
